sat-skin prod page korean title line spacing fix

--- a/client/js/saturday_products/saturday_products.scss
+++ b/client/js/saturday_products/saturday_products.scss
@@ -85,8 +85,10 @@
     text-transform: uppercase;
 }
 
-.height-fix {
-    height: 30px;
+.product-ktitle {
+    margin: 0;
+    margin-bottom: 10px;
+    margin-top: -10px;
 }
 
 .price_tag {
@@ -146,11 +148,19 @@
         /*padding-top: 10px;*/
     }
 
+    .height-fix {
+        height: 0px;
+    }
+
 }
 
 @media screen and (max-width: 940px){
     .clean-and-clear {
         height: 108px;
+    }
+
+    .height-fix {
+        height: 30px;
     }
 }
 
